workspace/monitoring/grafana-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: monitoring
spec:
  selector:
    istio: ingressgateway # Istio’nun default selector’ı
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
